Add hover over in the profile dropdown

--- a/app/views/shared/_profile_dropdown.html.erb
+++ b/app/views/shared/_profile_dropdown.html.erb
@@ -30,7 +30,7 @@
        aria-labelledby="user-menu-button" 
        tabindex="-1">
     <!-- Active: "bg-gray-50 outline-hidden", Not Active: "" -->
-    <a href="#" class="block px-3 py-1 text-sm/6 text-gray-900" role="menuitem" tabindex="-1" id="user-menu-item-0" @click="open = false">Your profile</a>
-    <a href="#" class="block px-3 py-1 text-sm/6 text-gray-900" role="menuitem" tabindex="-1" id="user-menu-item-1" @click="open = false">Sign out</a>
+    <a href="#" class="block px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50" role="menuitem" tabindex="-1" id="user-menu-item-0" @click="open = false">Your profile</a>
+    <a href="#" class="block px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50" role="menuitem" tabindex="-1" id="user-menu-item-1" @click="open = false">Sign out</a>
   </div>
 </div> 
