--- a/app/views/shared/_navigation_content.html.erb
+++ b/app/views/shared/_navigation_content.html.erb
@@ -1,6 +1,8 @@
 <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-indigo-600 px-6 pb-4">
   <div class="flex h-16 shrink-0 items-center">
-    <span class="text-2xl font-bold text-white">LLM Mania</span>
+    <%= link_to root_path, class: "text-2xl font-bold text-white hover:text-gray-200" do %>
+      LLM Mania
+    <% end %>
   </div>
   <nav class="flex flex-1 flex-col">
     <ul role="list" class="flex flex-1 flex-col gap-y-7">
