--- a/app/views/shared/_profile_dropdown.html.erb
+++ b/app/views/shared/_profile_dropdown.html.erb
@@ -9,7 +9,7 @@
     <span class="sr-only">Open user menu</span>
     <img class="size-8 rounded-full bg-gray-50" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
     <span class="hidden lg:flex lg:items-center">
-      <span class="ml-4 text-sm/6 font-semibold text-gray-900" aria-hidden="true">Tom Cook</span>
+      <span class="ml-4 text-sm/6 font-semibold text-gray-900" aria-hidden="true"><%= current_user.first_name %> <%= current_user.last_name %></span>
       <svg class="ml-2 size-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
         <path fill-rule="evenodd" d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
       </svg>
@@ -30,7 +30,20 @@
        aria-labelledby="user-menu-button" 
        tabindex="-1">
     <!-- Active: "bg-gray-50 outline-hidden", Not Active: "" -->
-    <a href="#" class="block px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50" role="menuitem" tabindex="-1" id="user-menu-item-0" @click="open = false">Your profile</a>
-    <a href="#" class="block px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50" role="menuitem" tabindex="-1" id="user-menu-item-1" @click="open = false">Sign out</a>
+    <%= link_to "Your profile", edit_user_registration_path, 
+        class: "block px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50", 
+        role: "menuitem", 
+        tabindex: "-1", 
+        id: "user-menu-item-0",
+        data: { turbo: false },
+        "@click": "open = false" %>
+    <%= button_to "Sign out", destroy_user_session_path,
+        method: :delete,
+        class: "block w-full text-left px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50", 
+        role: "menuitem", 
+        tabindex: "-1", 
+        id: "user-menu-item-1",
+        data: { turbo: false },
+        "@click": "open = false" %>
   </div>
 </div> 
