--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,13 +44,46 @@
 
           <div class="flex flex-1 gap-x-4 self-stretch lg:gap-x-6">
             <div class="ml-auto flex items-center gap-x-4 lg:gap-x-6">
-              <%= render 'shared/profile_dropdown' %>
+              <% if user_signed_in? %>
+                <%= render 'shared/profile_dropdown' %>
+              <% else %>
+                <%= link_to "Sign in", new_user_session_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+                <%= link_to "Sign up", new_user_registration_path, class: "ml-4 text-sm font-semibold leading-6 text-indigo-600" %>
+              <% end %>
             </div>
           </div>
         </div>
 
         <main class="py-10">
           <div class="px-4 sm:px-6 lg:px-8">
+            <% if notice %>
+              <div class="rounded-md bg-blue-50 p-4 mb-4">
+                <div class="flex">
+                  <div class="flex-shrink-0">
+                    <svg class="h-5 w-5 text-blue-400" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="ml-3">
+                    <p class="text-sm font-medium text-blue-800"><%= notice %></p>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+            <% if alert %>
+              <div class="rounded-md bg-red-50 p-4 mb-4">
+                <div class="flex">
+                  <div class="flex-shrink-0">
+                    <svg class="h-5 w-5 text-red-400" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+                    </svg>
+                  </div>
+                  <div class="ml-3">
+                    <p class="text-sm font-medium text-red-800"><%= alert %></p>
+                  </div>
+                </div>
+              </div>
+            <% end %>
             <%= yield %>
           </div>
         </main>
