--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -90,14 +90,14 @@
     <% end %>
 
     <div class="mt-10 space-y-6">
-      <div>
-        <h3 class="text-lg font-medium leading-6 text-gray-900">Cancel my account</h3>
+      <div class="px-4 py-5 sm:p-6">
+        <h3 class="text-lg font-medium leading-6 text-gray-900"><%= t('devise.registrations.edit.cancel_account') %></h3>
         <div class="mt-2">
-          <p class="text-sm text-gray-500">Unhappy? You can cancel your account. This action cannot be undone.</p>
+          <p class="text-sm text-gray-500"><%= t('devise.registrations.edit.unhappy') %> <%= t('devise.registrations.edit.confirm_cancel') %></p>
         </div>
         <div class="mt-3">
-          <%= button_to "Cancel my account", registration_path(resource_name), 
-              data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" },
+          <%= button_to t('devise.registrations.edit.cancel_account'), registration_path(resource_name), 
+              data: { confirm: t('common.are_you_sure'), turbo_confirm: t('common.are_you_sure') },
               method: :delete,
               class: "rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600" %>
         </div>
