--- a/app/views/shared/_off_canvas_menu_for_mobile.html.erb
+++ b/app/views/shared/_off_canvas_menu_for_mobile.html.erb
@@ -51,7 +51,7 @@
       -->
       <div class="absolute top-0 left-full flex w-16 justify-center pt-5">
         <button type="button" class="-m-2.5 p-2.5" @click="mobileMenuOpen = false">
-          <span class="sr-only">Close sidebar</span>
+          <span class="sr-only"><%= t('.close_sidebar') %></span>
           <svg class="size-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
           </svg>
