--- a/app/views/shared/_profile_dropdown.html.erb
+++ b/app/views/shared/_profile_dropdown.html.erb
@@ -6,7 +6,7 @@
           @click="open = !open"
           :aria-expanded="open"
           aria-haspopup="true">
-    <span class="sr-only">Open user menu</span>
+    <span class="sr-only"><%= t('layouts.application.open_user_menu') %></span>
     <img class="size-8 rounded-full bg-gray-50" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
     <span class="hidden lg:flex lg:items-center">
       <span class="ml-4 text-sm/6 font-semibold text-gray-900" aria-hidden="true"><%= current_user.first_name %> <%= current_user.last_name %></span>
@@ -30,14 +30,14 @@
        aria-labelledby="user-menu-button" 
        tabindex="-1">
     <!-- Active: "bg-gray-50 outline-hidden", Not Active: "" -->
-    <%= link_to "Your profile", edit_user_registration_path, 
+    <%= link_to t('.your_profile'), edit_user_registration_path, 
         class: "block px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50", 
         role: "menuitem", 
         tabindex: "-1", 
         id: "user-menu-item-0",
         data: { turbo: false },
         "@click": "open = false" %>
-    <%= button_to "Sign out", destroy_user_session_path,
+    <%= button_to t('.sign_out'), destroy_user_session_path,
         method: :delete,
         class: "block w-full text-left px-3 py-1 text-sm/6 text-gray-900 hover:bg-gray-50", 
         role: "menuitem", 
